src/css/apps/components/shell/startmenu/bottom.css
div.shell div.startmenu div.bottom {
  height: 50px;
  min-height: 50px;
  background-color: var(--button-glass-bg);
  border-radius: 10px;
  display: flex;
  align-items: center;
  padding: 10px 15px;
  gap: 10px;
  box-shadow: var(--secondary-box-shadow);
}

div.shell div.startmenu div.bottom span.lucide {
  font-size: 20px;
}

div.shell div.startmenu div.bottom form.search {
  flex-grow: 1;
  display: flex;
  align-items: center;
  gap: 10px;
}

div.shell div.startmenu div.bottom form.search input {
  margin: 0;
  padding: 0;
  flex-grow: 1;
  border: none;
  background-color: transparent;
  border-radius: 0;
}

div.shell div.startmenu div.bottom div.actions {
  display: flex;
  gap: 10px;
  align-items: center;
  padding-left: 10px;
  border-left: var(--button-glass-bg) 1px solid;
  height: 30px;
}

div.shell div.startmenu div.bottom div.actions button {
  margin: 0;
  padding: 0;
  background-color: transparent !important;
  height: 21px;
}
div.shell div.startmenu div.bottom div.actions button span {
  color: inherit;
  transition: color 0.1s;
}

div.shell div.startmenu div.bottom div.actions button:hover {
  color: var(--accent-light);
}

div.shell div.startmenu div.bottom div.actions button:active {
  color: var(--accent-dark);
}

